Fix overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html, body {
-    overflow-y:hidden;
-    height:100%;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
 }
 
 canvas {
